# com.palm.service.devmode

./: .gitignore  CMakeLists.txt  README.md  devmode_service.js  oss-pkg-info.yaml  package.json  services.json
files/launch/: devmode.conf.in  devmode.service.in  devmode.sh.in
files/sysbus/: com.palm.service.devmode.api.json  com.palm.service.devmode.groups.json  com.palm.service.devmode.perm.json  com.palm.service.devmode.role.json.in  com.palm.service.devmode.service.in  com.palm.service.devmode.test.role.json.in
files/sysbus305/: com.palm.service.devmode.json  com.palm.service.devmode.service
ssh/: webos.pub
tests/: sanity.js
